2011-09-25 mmichaud <michael.michaud@free.fr>
    * New BufferPlugIn exposing all the parameters of JTS 1.12 library

2011-09-25 mmichaud <michael.michaud@free.fr>
    * In MultiInputDialog showing Layer list in a JComboBox, selected
      layer was unreadable (black foreground and dard background)
      This should be fixed (may be due to a workaround Larry did to solve an old
      JRE problem)

2011-09-25 ede
  bugfix 2728360: Layer operations break the Undo Chain
  actually all plugins based on AbstractPlugIn have that behaviour if the do
    not reportNothingToUndoYet()
  disabled this in UndoableEditReceiver, now these plugins are simply ignored
    by undo

2011-09-24 mmichaud <michael.michaud@free.fr>
  * Refactoring of Selection package : 
    - use generics in selection related classes instead of OpenJUMP CollectionMap
    - improve memory usage (initialize all lists with an array of size 1 instead
      of the default array size)
    - fix old bug 2792806
    
    Changed classes are :
    -com.vividsolutions.jump.workbench.ui.SelectionManager
    -com.vividsolutions.jump.workbench.ui.AbstractSelection
    -com.vividsolutions.jump.workbench.ui.FeatureSelection
    -com.vividsolutions.jump.workbench.ui.PartSelection
    -com.vividsolutions.jump.workbench.ui.LineStringSelection
    -com.vividsolutions.jump.workbench.ui.EditTransaction
    -com.vividsolutions.jump.workbench.ui.AbstractSelection
    -com.vividsolutions.jump.workbench.ui.renderer.AbstractSelectionRenderer
    -com.vividsolutions.jump.workbench.ui.renderer.FeatureCollectionRenderer
    -com.vividsolutions.jump.workbench.ui.renderer.FeatureSelectionRenderer
    -com.vividsolutions.jump.workbench.ui.renderer.PartSelectionRenderer
    -com.vividsolutions.jump.workbench.ui.renderer.LineStringSelectionRenderer
    -com.vividsolutions.jump.workbench.ui.renderer.SelectionBackgroundRenderer
    -com.vividsolutions.jump.workbench.ui.cursortool.SelectTool